# Obscura

./: .gitignore  KAGGLE_DEMO_SCRIPT.md  KAGGLE_SUBMISSION.md  KAGGLE_WRITEUP.md  Makefile  Obscura-Pitch-Deck.pptx  README.md  obscura-killer-features.md  obscura-pitch-script.md  obscura-prd.md  obscura-problem-statement.md  vite.config.js
app/: make_demo_data.py  requirements.txt
app/backend/: companion.py  contracts.py  gemma.py  hardware.py  main.py  optimize_exec.py  phase1_redact.py  phase2_secure.py  phase3_organize.py  phase4_transcribe.py  presidio_detect.py  throttle.py
decks/: 20260718_Obscura_4-Prong_Healthcare_Deck.pptx  20260718_Obscura_Overview_PalantirGrade.pptx  20260718_Obscura_Overview_PalantirGrade_FocusedMVP.pptx  20260718_Obscura_Pitch_90s.pptx  KAGGLE_WRITEUP_GenAIforGood.md  QA_CHEAT_SHEET.md  README.md
demo/: encounter_transcript.txt
medical-scribe/: .env.example  .gitignore  .impeccable.md  CHANGELOG.md  Dockerfile  Dockerfile.demo  Dockerfile.dev  Dockerfile.test  IMPLEMENTATION_PLAN.md  README.md  build-all.sh  docker-compose.dev.yml  docker-compose.yml  index.html  package-lock.json  package.json  release-please-config.json
medical-scribe/experiments/thin-api/: pyproject.toml
medical-scribe/experiments/thin-api/app/: __init__.py  schemas.py
medical-scribe/experiments/thin-api/app/services/: notes.py  transcription.py
medical-scribe/server/: constants.py  dev_app.py  middleware.py  pyproject.toml  server.py
medical-scribe/server/api/: pdf_forms.py  rag.py  templates.py  transcribe.py
medical-scribe/server/api/config/: __init__.py  local_models.py  mcp.py  models.py  system.py
medical-scribe/server/database/: testing.py
medical-scribe/server/database/config/: manager.py
medical-scribe/server/database/config/defaults/: letters.py  prompts.py  templates.py
medical-scribe/server/database/core/: backup.py  connection.py  documents_db.py
medical-scribe/server/database/core/migrations/: v1_initial_schema.py  v2_reasoning.py  v6_patient_profiles.py
medical-scribe/server/database/entities/: letter.py  templates.py
medical-scribe/server/demo/: example_patients.json
medical-scribe/server/schemas/: chat.py  config.py  dashboard.py  grammars.py  patient.py  pdf_forms.py  templates.py
medical-scribe/server/tests/: test_chat.py  test_config.py  test_database.py  test_hackathon_mvp.py  test_jobs.py  test_letter.py  test_rag.py  test_templates.py  test_transcribe_api.py
medical-scribe/server/utils/: allocated_ports.py  helpers.py  llama_models.py  local_request_token.py  url_utils.py  whisper_models.py
medical-scribe/server/utils/chat/: engine.py
medical-scribe/server/utils/chat/config/: __init__.py  prompts.py
medical-scribe/server/utils/chat/streaming/: __init__.py  response.py
medical-scribe/server/utils/chat/tools/: accumulator.py  create_note.py  executor.py  list_outstanding_jobs.py  pdf_forms.py  previous_encounter.py  pubmed_search.py  registry.py  sanitization.py  search_patient_notes.py  todo_list.py  wiki_search.py
medical-scribe/server/utils/llm_client/: __init__.py  base.py
medical-scribe/server/utils/llm_client/providers/: openai.py
medical-scribe/server/utils/mcp/: __init__.py
medical-scribe/server/utils/nlp_tools/: adaptive_refinement.py  letter.py  reasoning.py  summarization_manager.py  templates.py
medical-scribe/server/utils/pdf_forms/: __init__.py
medical-scribe/server/utils/rag/: chunking_utils.py  fixed_token_chunker.py  processing.py  progress.py  semantic_chunker.py  vector_store.py
medical-scribe/server/utils/rag/backends/: base.py  sqlite_vec.py
medical-scribe/server/utils/rag/embeddings/: __init__.py
medical-scribe/server/utils/transcription/: __init__.py  refinement.py
medical-scribe/src-tauri/process-manager/: Cargo.toml
medical-scribe/src-tauri/process-manager/src/: main.rs  process.rs  protocol.rs
public/: site.webmanifest
scripts/: dev.mjs
src/: App.jsx  index.jsx
src-tauri/: Cargo.toml  entitlements.plist
src-tauri/icons/: icon.icns
src-tauri/process-manager/src/: ipc.rs
src-tauri/src/: encryption.rs  main.rs  process.rs
(+291 files in other folders)
