[package]
name = "obscura-pm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "obscura-pm"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
log = "0.4"
env_logger = "0.11"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
kqueue = "1"
